--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,20 +1,38 @@
-<p id="notice"></p>
 <h1>Books</h1>
-<%= @books.each do |book| %>
 
-<p>Title</p>
- <span>
-    <%= book.title %>
- </span>
+<table>
+ <theead>
+  <tr>
+   <th>title</th>
+   <th>body</th>
+   <th></th>
+  </tr>
+ </theead>
+ 
+ <tbody>
+  <%= @books.each do |book| %>
+  <tr>
+   <tb><%= book.title %></tb>
+   <tb><%= book.body %></tb>
+   <tb><%= link_to "show", book_path(book.id) %></tb>
+   <tb><%= link_to "edit", edit_book_path(book) %></tb>
+   <tb><%= link_to "destroy", book, "data-confirm" => "Are you sure?" %></tb>
+  </tr>
+  <% end %>
+ </tbody>
+</table>
 
- <h2>New book</h2>
- <%= form_with model: Book.new do |f| %>
-  <h4>Title</h4>
+
+<h2>New book</h2>
+<% if @book.errors.any? %>
+   ul{<% @book.errors.full_messages.each do |message| %>}
+<%= form_for(@book) do |f| %>
+
+  <%= f.label :Title %><br/>
   <%= f.text_field :title %>
-
-  <h4>Body</h4>
+  <h3>Body</h3>
   <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  
+  <% f.submit 'Create Book' %>
 
 <% end %>
