--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,22 @@
 <h1>Books</h1>
 
-<table>
- <theead>
+<table class="table">
+ <thead>
   <tr>
-   <th>title</th>
-   <th>body</th>
-   <th></th>
+   <th>Title</th>
+   <th>Body</th>
+   <th clospan="3"></th>
   </tr>
- </theead>
- 
+ </thead>
+
  <tbody>
-  <%= @books.each do |book| %>
+  <% @books.each do |book| %>
   <tr>
-   <tb><%= book.title %></tb>
-   <tb><%= book.body %></tb>
-   <tb><%= link_to "show", book_path(book.id) %></tb>
-   <tb><%= link_to "edit", edit_book_path(book) %></tb>
-   <tb><%= link_to "destroy", book, "data-confirm" => "Are you sure?" %></tb>
+   <td><%= book.title %></td>
+   <td><%= book.body %></td>
+   <td><%= link_to "show", book_path(book.id) %></td>
+   <td><%= link_to "edit", edit_book_path(book) %></td>
+   <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
   </tr>
   <% end %>
  </tbody>
@@ -24,15 +24,13 @@
 
 
 <h2>New book</h2>
-<% if @book.errors.any? %>
-   ul{<% @book.errors.full_messages.each do |message| %>}
-<%= form_for(@book) do |f| %>
+<%= form_with model:@book,local:true do |f| %>
 
   <%= f.label :Title %><br/>
-  <%= f.text_field :title %>
-  <h3>Body</h3>
-  <%= f.text_area :body %>
-  
-  <% f.submit 'Create Book' %>
+  <%= f.text_field :title %><br/>
+  <%= f.label :Body %><br/>
+  <%= f.text_area :body %><br/>
+
+  <%= f.submit 'Create Book' %>
 
 <% end %>
