--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,6 +24,14 @@
 
 
 <h2>New book</h2>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+   <% @book.errors.full_message.each do |message| %>
+    <li><%= message %></li>
+  </ul>
+ <% end %>
+  
 <%= form_with model:@book,local:true do |f| %>
 
   <%= f.label :Title %><br/>
