--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,5 +5,6 @@
 <p><%= @book.body %></p>
 
 
-<p><%= link_to "Back", books_path %></p>
-<p><%= link_to "Edit", edit_book_path(@book.id) %></p>
+    <%= link_to "Back", books_path %>
+    
+    <%= link_to "Edit", edit_book_path(@book.id) %>
