--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,6 +7,9 @@
   <%= f.label :Body %><br/>
   <%= f.text_area :body %><br/>
 
-  <%= f.submit 'Update Book' %>
+  <%= f.submit 'Update Book' %><br/>
 
+
+  <%= link_to "Back", books_path %>
+  <%= link_to "Show", book_path(@book.id) %>
   <% end %>
