--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
    <td><%= book.title %></td>
    <td><%= book.body %></td>
    <td><%= link_to "show", book_path(book.id) %></td>
-   <td><%= link_to "edit", edit_book_path(book) %></td>
+   <td><%= link_to "edit", edit_book_path(book.id) %></td>
    <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
   </tr>
   <% end %>
@@ -27,11 +27,12 @@
 <% if @book.errors.any? %>
   <%= @book.errors.count %>件のエラーが発生しました
   <ul>
-   <% @book.errors.full_message.each do |message| %>
+   <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
+    <% end %>
   </ul>
  <% end %>
-  
+
 <%= form_with model:@book,local:true do |f| %>
 
   <%= f.label :Title %><br/>
