--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,8 @@
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
   <ul>
    <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
@@ -19,6 +20,6 @@
   <%= f.submit 'Update Book' %><br/>
 
 
-  <%= link_to "Back", books_path %>
   <%= link_to "Show", book_path(@book.id) %>
+  <%= link_to "Back", books_path %>
   <% end %>
